--- a/package.json
+++ b/package.json
@@ -21,8 +21,17 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/cqrs": "^9.0.4",
+    "@nestjs/jwt": "^10.0.3",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
+    "argon2": "^0.30.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
